--- a/HabitTracker/app/src/main/res/values/strings.xml
+++ b/HabitTracker/app/src/main/res/values/strings.xml
@@ -42,14 +42,13 @@
     <string name="shr_account_label">My Account</string>
     <string name="inconplete">Incomplete</string>
     <string name="complete">Complete</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="plus">+</string>
     <string name="notification">Notification</string>
     <string name="select_end_date">Select End Date</string>
     <string name="end_date">End Date</string>
     <string name="select_start_date">Select Start Date</string>
-    <string name="enter_description">Enter Description</string>
+    <string name="enter_description">On completion task</string>
     <string name="habit_goal">Habit Goal</string>
     <string name="count">count\n</string>
     <string name="title">Title</string>
@@ -61,6 +60,7 @@
     <string name="creatsrewads">Creates a Rewarsds By Tapping the compose buttons</string>
     <string name="Noreward">No Rewards</string>
     <string name="password_mismatch_warning">confirmpassward and passwaed id not matched\n</string>
+    <string name="_2_hours_ago">2 hours ago</string>
 
 
 </resources>
